force-app/main/default/objects/SEL_IntegrationSetting__mdt/SEL_IntegrationSetting__mdt.object-meta.xml
<CustomObject>
    <description>Custom Metadata to store the integration configuration settings</description>
    <label>SEL Integration Setting</label>
    <pluralLabel>SEL Integration Settings</pluralLabel>
</CustomObject>