force-app/main/default/objects/SEL_IntegrationSetting__mdt/fields/SEL_BaseObjectApi__c.field-meta.xml
<CustomField>
    <fullName>SEL_BaseObjectApi__c</fullName>
    <description>The based object of the API.</description>
    <label>Base Object API</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>