force-app/main/default/objects/SEL_IntegrationSetting__mdt/fields/SEL_ClientCertificate__c.field-meta.xml
<CustomField>
    <fullName>SEL_ClientCertificate__c</fullName>
    <description>Set the client certificate&apos;s unique name as value.</description>
    <label>Client Certificate</label>
    <length>120</length>
    <type>Text</type>
</CustomField>