force-app/main/default/objects/SEL_IntegrationSetting__mdt/fields/SEL_EndpointExtension__c.field-meta.xml
<CustomField>
    <fullName>SEL_EndpointExtension__c</fullName>
    <description>Append additional endpoint details using this field including dynamic values. Use braces for dynamic value e.g. /services/data/{version}</description>
    <label>Endpoint Extension</label>
    <type>TextArea</type>
</CustomField>