force-app/main/default/objects/SEL_IntegrationSetting__mdt/fields/SEL_IntegrationDataMockId__c.field-meta.xml
<CustomField>
    <fullName>SEL_IntegrationDataMockId__c</fullName>
    <description>If mocking is enabled, this lookup uses the data stored in the Integration Data Mock CMT to return a response to the caller.</description>
    <label>Data Mock</label>
    <referenceTo>SEL_IntegrationDataMock__mdt</referenceTo>
    <relationshipLabel>SEL Integration Settings</relationshipLabel>
    <relationshipName>SEL_IntegrationSettingsMocks</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>