force-app/main/default/objects/SEL_IntegrationSetting__mdt/fields/SEL_IsActive__c.field-meta.xml
<CustomField>
    <fullName>SEL_IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A checkbox verifying whether the integration is active</description>
    <label>Is Active?</label>
    <type>Checkbox</type>
</CustomField>