force-app/main/default/objects/SEL_IntegrationSetting__mdt/fields/SEL_IsCompressed__c.field-meta.xml
<CustomField>
    <fullName>SEL_IsCompressed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if integration should compress responses</description>
    <label>Is Compressed?</label>
    <type>Checkbox</type>
</CustomField>