force-app/main/default/objects/SEL_IntegrationSetting__mdt/fields/SEL_IsMockingEnabled__c.field-meta.xml
<CustomField>
    <fullName>SEL_IsMockingEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if mocking is enabled. Make sure you turn this off in production.</description>
    <label>Is Mocking Enabled?</label>
    <type>Checkbox</type>
</CustomField>