force-app/main/default/objects/SEL_IntegrationSetting__mdt/fields/SEL_MessageFormat__c.field-meta.xml
<CustomField>
    <fullName>SEL_MessageFormat__c</fullName>
    <description>Type of Data Format</description>
    <inlineHelpText>either json or xml</inlineHelpText>
    <label>Message Format</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>JSON</fullName>
                <default>true</default>
                <label>JSON</label>
            </value>
            <value>
                <fullName>XML</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>