force-app/main/default/objects/SEL_IntegrationSetting__mdt/fields/SEL_NamedCredentials__c.field-meta.xml
<CustomField>
    <fullName>SEL_NamedCredentials__c</fullName>
    <description>The named credential to use in this HTTP Request configuration.</description>
    <label>Named Credentials</label>
    <length>80</length>
    <type>Text</type>
</CustomField>