force-app/main/default/objects/SEL_IntegrationSetting__mdt/fields/SEL_Timeout__c.field-meta.xml
<CustomField>
    <fullName>SEL_Timeout__c</fullName>
    <label>Timeout</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>