force-app/main/default/objects/SEL_IntegrationSetting__mdt/listViews/AllFields.listView-meta.xml
<ListView>
    <fullName>AllFields</fullName>
    <columns>DeveloperName</columns>
    <columns>MasterLabel</columns>
    <columns>SEL_NamedCredentials__c</columns>
    <columns>SEL_EndpointExtension__c</columns>
    <columns>SEL_HttpMethod__c</columns>
    <columns>SEL_Timeout__c</columns>
    <columns>SEL_IsCompressed__c</columns>
    <columns>SEL_IsMockingEnabled__c</columns>
    <columns>SEL_IsActive__c</columns>
    <columns>NamespacePrefix</columns>
    <columns>IsProtected</columns>
    <columns>SEL_ClientCertificate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Fields</label>
</ListView>